[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = ["gtx-1060 <klientkey200213@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server = "app.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
